--- a/index.html
+++ b/index.html
@@ -3,68 +3,72 @@
   <head>
     <meta charset="utf-8" />
     <!-- Below are the links to the CSS sheet which helps style this page and the Google Fonts style sheet for the Roboto font. -->
-    <link rel="stylesheet" type="text/css" href="jsstyle.css">
+    <link rel="stylesheet" type="text/css" href="Vanessa.css">
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <title>Meaningful Title or Logo Goes Here</title>
+        <title>Squid Games</title>
       </head>
       <body>
         <!-- Logo and menu start here. -->
         <div class="top-bar">
           <div class="logo">
-            <p>Meaningful Title or Logo Goes Here</p>
+            <p>How to Play</p>
           </div>
-          <nav class="top-menu">
+          <div class="top-menu">
             <ul>
               <li>
-                <a class="current-page-link" href="index.html">Page 1</a>
+                <a href="Biography.html">The Game</a>
               </li>
               <li>
-                <a href="page2.html">Page 2</a>
+                <a class="current-page-link" href="index.html">How to play</a>
               </li>
               <li>
-                <a href="page3.html">Page 3</a>
+                <a href="Other.html">Prize money</a>
               </li>
             </ul>
-          </nav>
+          </div>
         </div>
         <!-- The actual page content starts here. -->
         <div class="page-content">
           <div class="main-section">
-            <h1>Header 1</h1>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-            <p>Useful links:</p>
+            <h1> General Instructions</h1>
+            <p> The game is very simple. You need to win every game you participate in to stay alive. If you or the team you are in lose a game you die immediately. 
+              The frontman announces the beginning of every game and gives instructions on how the game will be played. The games are timed and part of winning is completing the game within the allocated time. There will be six games in total.
+               </p>
+            <h2> Games Played</h2>
             <ol>
               <li>
-                <a href="https://www.w3schools.com" target="_blank">W3Schools</a>
+                <a href= "https://www.playworks.org/game-library/red-light-green-light/" target="_blank">Red Light, Green Light</a>    
               </li>
               <li>
-                <a href="https://jeansebastienmarier.com" target="_blank">My site</a>
+                <a href= "https://www.youtube.com/watch?v=U9uhgf0ISJs" target="_blank"> Honeycomb Candy</a>
+              </li>
+              <li>
+                Tug of War
+              </li>
+              <li>
+                Glass Bridge
+              </li>
+              <li>
+                Marbles
+              </li>
+              <li>
+                Squid Game
               </li>
             </ol>
-            <h2>Subheader 1</h2>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
             <figure>
-              <img src="images/pointe-au-pere-1024px.jpg" alt="Phare de la Pointe-au-Père">
-                <figcaption>Le phare de Pointe-au-Père est situé à Rimouski, au Québec. Photo: Jean-Sébastien Marier</figcaption>
+              <img src="images/IMG_1811.JPG" alt="BrightSpace ambassador talking to student">
+                <figcaption> BrightSpace Ambassador explaining to a student how to navigate the site  Photo: Vanessa Bobai</figcaption>
               </figure>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-              <h2>Subheader 2</h2>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-              <p>What does "Hello, World!" mean? Here's Wikipedia's answer:</p>
-              <blockquote cite="https://en.wikipedia.org/wiki/%22Hello,_World!%22_program">
-              A "Hello, World!" program is a computer program that outputs or displays "Hello, World!" to a user. Being a very simple program in most programming languages, it is often used to illustrate the basic syntax of a programming language for a working program. It is often the very first program people write when they are new to a language.
-              </blockquote>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-            </div>
           </div>
-          <!--The footer starts here.-->
-          <div class="footer">
-            <div class="footer-content">
-              <p>©2017 Your Name | 
-                <a href="mailto:username@uottawa.ca">username@uottawa.ca</a>
-              </p>
-            </div>
+        </div>
+        <!--The footer starts here.-->
+        <div class="footer">
+          <div class="footer-content">
+            <p>©2021 Vanessa Bobai | 
+              <a href="mailto:vboba006@uottawa.ca">vboba006@uottawa.ca</a>
+            </p>
           </div>
-        </body>
-      </html>
+        </div>
+      </body>
+    </html>
